Tue Apr  3 19:53:12 BST 2012  Lee Noar  <leenoar@sky.com>

	* unix/dev.c(__pipewrite): Always restore the file pointer.
	The second (fileptr==extent) test can prevent the file
	pointer from being correctly restored causing a read of the
	pipe to fail. This fixes a problem in Mono where reading
	a socket controlled by a pipe would fail with a timeout.

Tue Mar 20 19:29:47 GMT 2012  Lee Noar  <leenoar@sky.com>

	* include/sys/elf.h(DT_RISCOS_GCC_DIR): Rename to
	DT_RISCOS_ABI_VERSION.
	* gen-auto.pl: Generate file misc/abi.c.
	* Makefile.am: Add misc/abi.c to list of file to compile.

Mon Mar 12 19:36:19 GMT 2012  Lee Noar  <leenoar@sky.com>

	* include/sys/elf.h: Define DT_RISCOS_GCC_DIR.

Sun Mar 04 17:47:47 GMT 2012  Lee Noar  <leenoar@sky.com>

	* Makefile.am: Compile libm-dbl64/s_sincos.c(__sincos) with
	flags -fno-builtin-cos and -fno-builtin-sin to prevent GCC
	from optimising calls to sin() and cos() into a call to
	__cexp(). __cexp() already calls __sincos() and this would
	create an infinite loop.

Sat Mar  3 17:37:27 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* netlib/get_ro_socket.c: Add.
	* include/unixlib/local.h (__get_ro_socket): Add.
	* Makefile.am (netlib_src): Add netlib/get_ro_socket.c.

Fri Mar  2 22:51:55 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* unix/features.c (__sfix_default): Remove "a".
	* common/riscosify.c (__sfix_default): Likewise.

Sat Feb 18 11:44:27 GMT 2012  Lee Noar  <leenoar@sky.com>

	* unistd/symlink.c(symlink): More compact code and better
	error handling.

Fri Feb 17 20:36:11 GMT 2012  Lee Noar  <leenoar@sky.com>

	* unistd/symlink.c(symlink): Implement writing of symlink
	files.

Sun Feb 12 14:33:56 GMT 2012  Lee Noar  <leenoar@sky.com>

	* signal/post.c: Remove debug code.

Sun Feb 12 14:16:14 GMT 2012  Lee Noar  <leenoar@sky.com>

	Add basic support for three argument signal handlers.

	* include/ucontext.h: New file. Declare sigcontext structure.
	* include/signal.h: Add siginfo_t structure.